RESOLVED FIXED270239
(REGRESSION 275453@main) Broke clean cmake builds
https://bugs.webkit.org/show_bug.cgi?id=270239
Summary (REGRESSION 275453@main) Broke clean cmake builds
Lauro Moura
Reported 2024-02-28 11:03:19 PST
Error: <snip> -- Configuring done CMake Error at Source/cmake/WebKitMacros.cmake:99 (add_library): Cannot find source file: /home/lauro/dev/WebKit/WebKitBuild/WPE/Release/DerivedSources/WebKit/ModelProcessModelPlayerProxyMessageReceiver.cpp Tried extensions .c .C .c++ .cc .cpp .cxx .cu .mpp .m .M .mm .ixx .cppm .h .hh .h++ .hm .hpp .hxx .in .txx .f .F .for .f77 .f90 .f95 .f03 .hip .ispc Call Stack (most recent call first): Source/WebKit/CMakeLists.txt:724 (WEBKIT_FRAMEWORK_DECLARE) Tentative patch incoming
Attachments
Lauro Moura
Comment 1 2024-02-28 11:14:09 PST
EWS
Comment 2 2024-02-28 21:44:13 PST
Committed 275480@main (73271df67cec): <https://commits.webkit.org/275480@main> Reviewed commits have been landed. Closing PR #25243 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-02-28 21:45:47 PST
Note You need to log in before you can comment on or make changes to this bug.