(REGRESSION 275453@main) Broke clean cmake builds https://bugs.webkit.org/show_bug.cgi?id=270239

Reviewed by Don Olmstead.

Fix entry for file that was moved to cocoa-specific directory.

* Source/WebKit/UIProcess/XR/PlatformXRSystem.h: Drive-by non-unified
  fix that was breaking unified WPE build on flatpak
* Source/WebKit/Sources.txt:
* Source/WebKit/SourcesCocoa.txt:

Canonical link: https://commits.webkit.org/275480@main